Fixing the problems

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,7 +10,7 @@
 
 	  gtag('config', 'UA-154851109-1');
 	</script>
-  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js" crossorigin="anonymous"></script>
 	<meta name="google-site-verification" content="m6HBYXUqFKJFFcrDg1qKzZU2u49hXYN43QUlDmc8Qg4" />
 	<meta name="theme-color" content="#41805f">
     <meta charset="UTF-8">
@@ -21,7 +21,6 @@
     <meta name="description" content="Welcome to Websites With Passion. I am Maciej Kuta. I write websites from scratch and updating it. They are intuitive, functional and responsive. My work is distinguished by quickness and quality (I do my best). I use newest technologies. Here you can be updated about my offer and projects">
     <title><%= header %></title>
 	<meta name="google-site-verification" content="9FSWyiNz8TkGmlAX0sy3hKJ3g1StIuKKl3AxjNuC09Y" />
-    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.js" async></script>
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,700" rel="stylesheet">
     <script src="https://kit.fontawesome.com/b2ec1cb26d.js" crossorigin="anonymous" async></script>
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -32,8 +31,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Indie+Flower&family=Sacramento&display=swap" rel="stylesheet">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous" async></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous" async></script>
+  
   
 </head>
 <body>
