--- a/views/projects/index.ejs
+++ b/views/projects/index.ejs
@@ -71,10 +71,10 @@
                             <div class="card">
                                 <% if(projects[i].link !== 'undefined'){ %>
                                    
-                                    <a href="<%= projects[i].link %>"><img src="<%= projects[i].profile %>" alt="Strona" class="card-img-top"></a>
+                                    <a href="<%= projects[i].link %>"><img src="<%= projects[i].profile %>" alt="Strona" class="card-img-top" crossorigin></a>
                                
                             <% } else { %>
-                                    <img src="<%= projects[i].profile %>" alt="Strona" class="card-img-top">
+                                    <img src="<%= projects[i].profile %>" alt="Strona" class="card-img-top" crossorigin>
                             <% } %>
                             
                             
