--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -139,8 +139,11 @@
 <script type="text/javascript" id="cookieinfo"
 	src="//cookieinfoscript.com/js/cookieinfo.min.js" data-message="<%= language.__('Używam plików cookies (tzw.ciasteczek), by poprawić jakość używania strony. Przez kliknięcie x zgadzasz się na zbieranie danych. Masz możliwość wyłączenia ich w przeglądarce.') %>" data-bg="white" data-moreinfo="https://youronlinechoices.eu" data-linkmsg="www.youronlinechoices.eu" data-fg="black" data-text-align="left" data-font-size="11px" async>
 </script>
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <script src="/script.js" async></script>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous" async></script>
 <script>
     
     $(document).on("scroll",function () {
